Correct misalignment of label updates in issues discussion tab
Fixed #40

--- a/gim_project/front/sass/components/_issue.scss
+++ b/gim_project/front/sass/components/_issue.scss
@@ -401,6 +401,7 @@ $file-list-width: 400px;
     .part-labels, .part-label_type {
         ul {
             display: inline-block;
+            margin-top: 0;
         }
         & > span {
             float: left;
